Add support for setting the cursor color (OSC 12)

Parse OSC 12 and set the cursor color accordingly.

BUG: 488905