src/Vt102Emulation.h
@@ -182,6 +182,7 @@ private:
     enum osc {
         // https://invisible-island.net/xterm/ctlseqs/ctlseqs.html#h2-Operating-System-Commands
         ReportColors = 4,
+        CursorColor = 12,
         Clipboard = 52,
         KittyNotification = 99,
         ResetColors = 104,
